[metadata]
platform = any
keywords = science, solar physics, solar, sun, shock waves
classifiers =
  Development Status :: 4 - Beta/Test
  Intended Audience :: Science/Research
  License :: OSI Approved :: GPL-3.0 License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering :: Physics
